src/test/resources/valid/no-return.c
int foo() {
  int z;
  z = 9;
}
