src/test/resources/parse-error/void-variable.c
int f(int x) {
  void z;
  return x;
}
